# smartcut

./: .gitignore  AGENTS.md  FADE_FEATURE_SUMMARY.md  FORMAT_SUPPORT.md  README.md  pyproject.toml  requirements.txt  setup_windows.bat
distribution/pyinstaller/: linux_package.sh  windows_package.bat
distribution/pypi/: upload.sh
examples/: gradio_app.py
scripts/: detect_h264_sps_ids.py
smartcut/: __init__.py  __main__.py  cut_video.py  media_container.py  media_utils.py  misc_data.py  nal_tools.py
tests/: README_TEST_RESOURCES.md  analyze_keyframe_structure.py  generate_synthetic_video.py  smartcut_tests.py  test_api.py  test_audio_parameters.py  test_fade.py  test_fade_keywords.py  test_utils.py  test_validation.py  verify_audio_fade.py
