[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "smartcut"
version = "1.3.3"
description = "CLI tool for efficient video cutting with minimal recoding"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    {name = "Santtu Keskinen", email = "santtu.keskinen@gmail.com"}
]
maintainers = [
    {name = "Santtu Keskinen", email = "santtu.keskinen@gmail.com"}
]
keywords = [
    "video", "cutting", "editing", "ffmpeg", "smart-cut", "lossless",
    "frame-accurate", "cli", "video-processing"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Developers",
    "Topic :: Multimedia :: Video :: Conversion",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "av==15.0",
    "tqdm",
]

[project.optional-dependencies]
test = [
    "ffmpeg-python",
    "soundfile",
    "scipy",
    "requests",
]
dev = [
    "build",
    "twine",
    "pytest",
]

[project.urls]
Homepage = "https://github.com/skeskinen/smartcut"
Documentation = "https://github.com/skeskinen/smartcut/blob/main/README.md"
Repository = "https://github.com/skeskinen/smartcut.git"
"Bug Tracker" = "https://github.com/skeskinen/smartcut/issues"
Changelog = "https://github.com/skeskinen/smartcut/blob/main/README.md#version-history"
"Commercial GUI" = "https://smartmediacutter.com"

[project.scripts]
smartcut = "smartcut.__main__:main"

[tool.setuptools]
packages = ["smartcut"]

[tool.setuptools.package-data]
smartcut = ["py.typed"]